@@ -17,6 +17,7 @@ Other features
  * Added support for customising EditHandler-based forms on a per-request basis (Bertrand Bordage)
  * Added more informative error message when ``|richtext`` filter is applied to a non-string value (mukesh5)
  * Automatic search indexing can now be disabled on a per-model basis via the ``search_auto_update`` attribute (Karl Hobley)
+ * Improved diffing of StreamFields when comparing page revisions (Karl Hobley)
 
 
 Bug fixes
